--- a/index.html
+++ b/index.html
@@ -274,7 +274,19 @@
           <h2 class="section__name">Наша команда</h2>
           <ul class="list section__list">
             <li class="command__item">
-              <img src="images/igor.jpg" alt="Igor" width="270" height="260" />
+              <img
+                srcset="
+                  ./images/desktop/igor-desktop.jpg    270w,
+                  ./images/desktop/igor-desktop@2x.jpg 540w,
+                  ./images/tablet/igor-tablet.jpg      354w,
+                  ./images/tablet/igor-tablet@2x.jpg   708w,
+                  ./images/mobile/igor-mobile.jpg      450w,
+                  ./images/mobile/igor-mobile@2x.jpg   900w
+                "
+                alt=""
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px,
+              100vw"
+              />
               <div class="command__content">
                 <h3 class="command__people">Ігор Дем'яненко</h3>
                 <p class="command__position">Product Designer</p>
@@ -311,7 +323,19 @@
               </div>
             </li>
             <li class="command__item">
-              <img src="images/olga.jpg" alt="Olga" width="270" height="260" />
+              <img
+                srcset="
+                  ./images/desktop/olga-desktop.jpg    270w,
+                  ./images/desktop/olga-desktop@2x.jpg 540w,
+                  ./images/tablet/olga-tablet.jpg      354w,
+                  ./images/tablet/olga-tablet@2x.jpg   708w,
+                  ./images/mobile/olga-mobile.jpg      450w,
+                  ./images/mobile/olga-mobile@2x.jpg   900w
+                "
+                alt=""
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px,
+              100vw"
+              />
               <div class="command__content">
                 <h3 class="command__people">Ольга Рєпіна</h3>
                 <p class="command__position">Frontend Developer</p>
@@ -348,7 +372,19 @@
               </div>
             </li>
             <li class="command__item">
-              <img src="images/mykola.jpg" alt="Mykola" width="270" height="260" />
+              <img
+                srcset="
+                  ./images/desktop/mykola-desktop.jpg    270w,
+                  ./images/desktop/mykola-desktop@2x.jpg 540w,
+                  ./images/tablet/mykola-tablet.jpg      354w,
+                  ./images/tablet/mykola-tablet@2x.jpg   708w,
+                  ./images/mobile/mykola-mobile.jpg      450w,
+                  ./images/mobile/mykola-mobile@2x.jpg   900w
+                "
+                alt=""
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px,
+              100vw"
+              />
               <div class="command__content">
                 <h3 class="command__people">Микола Тарасов</h3>
                 <p class="command__position">Marketing</p>
@@ -385,7 +421,19 @@
               </div>
             </li>
             <li class="command__item">
-              <img src="images/mykhailo.jpg" alt="Mykhailo" width="270" height="260" />
+              <img
+                srcset="
+                  ./images/desktop/mykhailo-desktop.jpg    270w,
+                  ./images/desktop/mykhailo-desktop@2x.jpg 540w,
+                  ./images/tablet/mykhailo-tablet.jpg      354w,
+                  ./images/tablet/mykhailo-tablet@2x.jpg   708w,
+                  ./images/mobile/mykhailo-mobile.jpg      450w,
+                  ./images/mobile/mykhailo-mobile@2x.jpg   900w
+                "
+                alt=""
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px,
+              100vw"
+              />
               <div class="command__content">
                 <h3 class="command__people">Михайло Єрмаков</h3>
                 <p class="command__position">UI Designer</p>
