goit-markup-hw-08-V3

--- a/index.html
+++ b/index.html
@@ -239,10 +239,9 @@
             <li class="work__item">
               <div class="work__icons">
                 <img
-                  src="./images/development.jpg"
-                  alt="Web-Development"
-                  width="370"
-                  height="294"
+                  srcset="./images/work/desktop-app.jpg 370w, ./images/work/desktop-app@2x.jpg 740w"
+                  alt="desktop-app"
+                  sizes="(min-width: 1200px) 370px"
                 />
                 <div class="work__name">
                   <h3 class="work__text">ДЕСКТОПНІ ДОДАТКИ</h3>
@@ -251,7 +250,11 @@
             </li>
             <li class="work__item">
               <div class="work__icons">
-                <img src="images/marketing.jpg" alt="Marketing" width="370" height="294" />
+                <img
+                  srcset="./images/work/mobile-app.jpg 370w, ./images/work/mobile-app@2x.jpg 740w"
+                  alt="desktop-app"
+                  sizes="(min-width: 1200px) 370px"
+                />
                 <div class="work__name">
                   <h3 class="work__text">МОБІЛЬНІ ДОДАТКИ</h3>
                 </div>
@@ -259,7 +262,11 @@
             </li>
             <li class="work__item">
               <div class="work__icons">
-                <img src="images/design.jpg" alt="Design" width="370" height="294" />
+                <img
+                  srcset="./images/work/design.jpg 370w, ./images/work/design@2x.jpg 740w"
+                  alt="desktop-app"
+                  sizes="(min-width: 1200px) 370px"
+                />
                 <div class="work__name">
                   <h3 class="work__text">ДИЗАЙНЕРСЬКІ РІШЕННЯ</h3>
                 </div>
@@ -283,7 +290,7 @@
                   ./images/mobile/igor-mobile.jpg      450w,
                   ./images/mobile/igor-mobile@2x.jpg   900w
                 "
-                alt=""
+                alt="igor-photo"
                 sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px,
               100vw"
               />
@@ -332,7 +339,7 @@
                   ./images/mobile/olga-mobile.jpg      450w,
                   ./images/mobile/olga-mobile@2x.jpg   900w
                 "
-                alt=""
+                alt="olga-photo"
                 sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px,
               100vw"
               />
@@ -381,7 +388,7 @@
                   ./images/mobile/mykola-mobile.jpg      450w,
                   ./images/mobile/mykola-mobile@2x.jpg   900w
                 "
-                alt=""
+                alt="mykola-photo"
                 sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px,
               100vw"
               />
@@ -430,7 +437,7 @@
                   ./images/mobile/mykhailo-mobile.jpg      450w,
                   ./images/mobile/mykhailo-mobile@2x.jpg   900w
                 "
-                alt=""
+                alt="mykhailo-foto"
                 sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px,
               100vw"
               />
