goit-markup-hw-08-V6

--- a/index.html
+++ b/index.html
@@ -290,10 +290,12 @@
                   ./images/mobile/igor-mobile.jpg      450w,
                   ./images/mobile/igor-mobile@2x.jpg   900w
                 "
-                alt="igor-photo"
                 sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px,
               100vw"
+                alt="igor-photo"
+                src="./images/desktop/igor-desktop.jpg"
               />
+
               <div class="command__content">
                 <h3 class="command__people">Ігор Дем'яненко</h3>
                 <p class="command__position">Product Designer</p>
