goit-markup-hw-08-V7

--- a/index.html
+++ b/index.html
@@ -281,21 +281,22 @@
           <h2 class="section__name">Наша команда</h2>
           <ul class="list section__list">
             <li class="command__item">
-              <img
-                srcset="
-                  ./images/desktop/igor-desktop.jpg    270w,
-                  ./images/desktop/igor-desktop@2x.jpg 540w,
-                  ./images/tablet/igor-tablet.jpg      354w,
-                  ./images/tablet/igor-tablet@2x.jpg   708w,
-                  ./images/mobile/igor-mobile.jpg      450w,
-                  ./images/mobile/igor-mobile@2x.jpg   900w
-                "
-                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px,
+              <div class="command__img">
+                <img
+                  srcset="
+                    ./images/desktop/igor-desktop.jpg    270w,
+                    ./images/desktop/igor-desktop@2x.jpg 540w,
+                    ./images/tablet/igor-tablet.jpg      354w,
+                    ./images/tablet/igor-tablet@2x.jpg   708w,
+                    ./images/mobile/igor-mobile.jpg      450w,
+                    ./images/mobile/igor-mobile@2x.jpg   900w
+                  "
+                  sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px,
               100vw"
-                alt="igor-photo"
-                src="./images/desktop/igor-desktop.jpg"
-              />
-
+                  alt="igor-photo"
+                  src="./images/desktop/igor-desktop.jpg"
+                />
+              </div>
               <div class="command__content">
                 <h3 class="command__people">Ігор Дем'яненко</h3>
                 <p class="command__position">Product Designer</p>
@@ -332,19 +333,21 @@
               </div>
             </li>
             <li class="command__item">
-              <img
-                srcset="
-                  ./images/desktop/olga-desktop.jpg    270w,
-                  ./images/desktop/olga-desktop@2x.jpg 540w,
-                  ./images/tablet/olga-tablet.jpg      354w,
-                  ./images/tablet/olga-tablet@2x.jpg   708w,
-                  ./images/mobile/olga-mobile.jpg      450w,
-                  ./images/mobile/olga-mobile@2x.jpg   900w
-                "
-                alt="olga-photo"
-                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px,
+              <div class="command__img">
+                <img
+                  srcset="
+                    ./images/desktop/olga-desktop.jpg    270w,
+                    ./images/desktop/olga-desktop@2x.jpg 540w,
+                    ./images/tablet/olga-tablet.jpg      354w,
+                    ./images/tablet/olga-tablet@2x.jpg   708w,
+                    ./images/mobile/olga-mobile.jpg      450w,
+                    ./images/mobile/olga-mobile@2x.jpg   900w
+                  "
+                  alt="olga-photo"
+                  sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px,
               100vw"
-              />
+                />
+              </div>
               <div class="command__content">
                 <h3 class="command__people">Ольга Рєпіна</h3>
                 <p class="command__position">Frontend Developer</p>
@@ -381,19 +384,21 @@
               </div>
             </li>
             <li class="command__item">
-              <img
-                srcset="
-                  ./images/desktop/mykola-desktop.jpg    270w,
-                  ./images/desktop/mykola-desktop@2x.jpg 540w,
-                  ./images/tablet/mykola-tablet.jpg      354w,
-                  ./images/tablet/mykola-tablet@2x.jpg   708w,
-                  ./images/mobile/mykola-mobile.jpg      450w,
-                  ./images/mobile/mykola-mobile@2x.jpg   900w
-                "
-                alt="mykola-photo"
-                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px,
+              <div class="command__img">
+                <img
+                  srcset="
+                    ./images/desktop/mykola-desktop.jpg    270w,
+                    ./images/desktop/mykola-desktop@2x.jpg 540w,
+                    ./images/tablet/mykola-tablet.jpg      354w,
+                    ./images/tablet/mykola-tablet@2x.jpg   708w,
+                    ./images/mobile/mykola-mobile.jpg      450w,
+                    ./images/mobile/mykola-mobile@2x.jpg   900w
+                  "
+                  alt="mykola-photo"
+                  sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px,
               100vw"
-              />
+                />
+              </div>
               <div class="command__content">
                 <h3 class="command__people">Микола Тарасов</h3>
                 <p class="command__position">Marketing</p>
@@ -430,19 +435,21 @@
               </div>
             </li>
             <li class="command__item">
-              <img
-                srcset="
-                  ./images/desktop/mykhailo-desktop.jpg    270w,
-                  ./images/desktop/mykhailo-desktop@2x.jpg 540w,
-                  ./images/tablet/mykhailo-tablet.jpg      354w,
-                  ./images/tablet/mykhailo-tablet@2x.jpg   708w,
-                  ./images/mobile/mykhailo-mobile.jpg      450w,
-                  ./images/mobile/mykhailo-mobile@2x.jpg   900w
-                "
-                alt="mykhailo-foto"
-                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px,
+              <div class="command__img">
+                <img
+                  srcset="
+                    ./images/desktop/mykhailo-desktop.jpg    270w,
+                    ./images/desktop/mykhailo-desktop@2x.jpg 540w,
+                    ./images/tablet/mykhailo-tablet.jpg      354w,
+                    ./images/tablet/mykhailo-tablet@2x.jpg   708w,
+                    ./images/mobile/mykhailo-mobile.jpg      450w,
+                    ./images/mobile/mykhailo-mobile@2x.jpg   900w
+                  "
+                  alt="mykhailo-foto"
+                  sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px,
               100vw"
-              />
+                />
+              </div>
               <div class="command__content">
                 <h3 class="command__people">Михайло Єрмаков</h3>
                 <p class="command__position">UI Designer</p>
