--- a/portfolio.html
+++ b/portfolio.html
@@ -130,7 +130,20 @@
             <li class="card__item">
               <a href="" class="card__link">
                 <div class="card__thumb">
-                  <img src="./images/technocrack.jpg" alt="" width="370" height="294" />
+                  <img
+                    srcset="
+                      ./images/portfolio/desktop/technocrack-desktop.jpg    370w,
+                      ./images/portfolio/desktop/technocrack-desktop@2x.jpg 720w,
+                      ./images/portfolio/tablet/technocrack-tablet.jpg      354w,
+                      ./images/portfolio/tablet/technocrack-tablet@2x.jpg   708w,
+                      ./images/portfolio/mobile/technocrack-mobile.jpg      450w,
+                      ./images/portfolio/mobile/technocrack-mobile@2x.jpg   900w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px,
+              100vw"
+                    alt="technocrack"
+                    src="./images/portfolio/desktop/technocrack-desktop.jpg"
+                  />
                   <div class="card__overlay">
                     <p class="overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -139,7 +152,7 @@
                     </p>
                   </div>
                 </div>
-                <div class="card__content">
+                <div class="card__content card__content--tab">
                   <h2 class="card__heading">Технокряк</h2>
                   <p class="card__text">Веб-сайт</p>
                 </div>
@@ -148,7 +161,20 @@
             <li class="card__item">
               <a href="" class="card__link">
                 <div class="card__thumb">
-                  <img src="./images/new-orlean.jpg" alt="" width="370" height="294" />
+                  <img
+                    srcset="
+                      ./images/portfolio/desktop/new-orlean-desktop.jpg    370w,
+                      ./images/portfolio/desktop/new-orlean-desktop@2x.jpg 720w,
+                      ./images/portfolio/tablet/new-orlean-tablet.jpg      354w,
+                      ./images/portfolio/tablet/new-orlean-tablet@2x.jpg   708w,
+                      ./images/portfolio/mobile/new-orlean-mobile.jpg      450w,
+                      ./images/portfolio/mobile/new-orlean-mobile@2x.jpg   900w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px,
+              100vw"
+                    alt="new-orlean"
+                    src="./images/portfolio/desktop/new-orlean-desktop.jpg"
+                  />
                   <div class="card__overlay">
                     <p class="overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -166,7 +192,20 @@
             <li class="card__item">
               <a href="" class="card__link">
                 <div class="card__thumb">
-                  <img src="./images/seafood.jpg" alt="" width="370" height="294" />
+                  <img
+                    srcset="
+                      ./images/portfolio/desktop/seafood-desktop.jpg    370w,
+                      ./images/portfolio/desktop/seafood-desktop@2x.jpg 720w,
+                      ./images/portfolio/tablet/seafood-tablet.jpg      354w,
+                      ./images/portfolio/tablet/seafood-tablet@2x.jpg   708w,
+                      ./images/portfolio/mobile/seafood-mobile.jpg      450w,
+                      ./images/portfolio/mobile/seafood-mobile@2x.jpg   900w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px,
+              100vw"
+                    alt="seafood"
+                    src="./images/portfolio/desktop/seafood-desktop.jpg"
+                  />
                   <div class="card__overlay">
                     <p class="overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -184,7 +223,20 @@
             <li class="card__item">
               <a href="" class="card__link">
                 <div class="card__thumb">
-                  <img src="./images/prime.jpg" alt="" width="370" height="294" />
+                  <img
+                    srcset="
+                      ./images/portfolio/desktop/prime-desktop.jpg    370w,
+                      ./images/portfolio/desktop/prime-desktop@2x.jpg 720w,
+                      ./images/portfolio/tablet/prime-tablet.jpg      354w,
+                      ./images/portfolio/tablet/prime-tablet@2x.jpg   708w,
+                      ./images/portfolio/mobile/prime-mobile.jpg      450w,
+                      ./images/portfolio/mobile/prime-mobile@2x.jpg   900w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px,
+              100vw"
+                    alt="prime"
+                    src="./images/portfolio/desktop/prime-desktop.jpg"
+                  />
                   <div class="card__overlay">
                     <p class="overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -202,7 +254,20 @@
             <li class="card__item">
               <a href="" class="card__link">
                 <div class="card__thumb">
-                  <img src="./images/boxes.jpg" alt="" width="370" height="294" />
+                  <img
+                    srcset="
+                      ./images/portfolio/desktop/boxes-desktop.jpg    370w,
+                      ./images/portfolio/desktop/boxes-desktop@2x.jpg 720w,
+                      ./images/portfolio/tablet/boxes-tablet.jpg      354w,
+                      ./images/portfolio/tablet/boxes-tablet@2x.jpg   708w,
+                      ./images/portfolio/mobile/boxes-mobile.jpg      450w,
+                      ./images/portfolio/mobile/boxes-mobile@2x.jpg   900w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px,
+              100vw"
+                    alt="boxes"
+                    src="./images/portfolio/desktop/boxes-desktop.jpg"
+                  />
                   <div class="card__overlay">
                     <p class="overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -221,10 +286,18 @@
               <a href="" class="card__link">
                 <div class="card__thumb">
                   <img
-                    src="./images/inspiration-has-no-borders.jpg"
-                    alt=""
-                    width="370"
-                    height="294"
+                    srcset="
+                      ./images/portfolio/desktop/inspiration-has-no-borders-desktop.jpg    370w,
+                      ./images/portfolio/desktop/inspiration-has-no-borders-desktop@2x.jpg 720w,
+                      ./images/portfolio/tablet/inspiration-has-no-borders-tablet.jpg      354w,
+                      ./images/portfolio/tablet/inspiration-has-no-borders-tablet@2x.jpg   708w,
+                      ./images/portfolio/mobile/inspiration-has-no-borders-mobile.jpg      450w,
+                      ./images/portfolio/mobile/inspiration-has-no-borders-mobile@2x.jpg   900w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px,
+              100vw"
+                    alt="inspiration-has-no-borders"
+                    src="./images/portfolio/desktop/inspiration-has-no-borders-desktop.jpg"
                   />
                   <div class="card__overlay">
                     <p class="overlay__text">
@@ -243,7 +316,20 @@
             <li class="card__item">
               <a href="" class="card__link">
                 <div class="card__thumb">
-                  <img src="./images/limited-edition.jpg" alt="" width="370" height="294" />
+                  <img
+                    srcset="
+                      ./images/portfolio/desktop/limited-edition-desktop.jpg    370w,
+                      ./images/portfolio/desktop/limited-edition-desktop@2x.jpg 720w,
+                      ./images/portfolio/tablet/limited-edition-tablet.jpg      354w,
+                      ./images/portfolio/tablet/limited-edition-tablet@2x.jpg   708w,
+                      ./images/portfolio/mobile/limited-edition-mobile.jpg      450w,
+                      ./images/portfolio/mobile/limited-edition-mobile@2x.jpg   900w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px,
+              100vw"
+                    alt="limited-edition"
+                    src="./images/portfolio/desktop/limited-edition-desktop.jpg"
+                  />
                   <div class="card__overlay">
                     <p class="overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -261,7 +347,20 @@
             <li class="card__item">
               <a href="" class="card__link">
                 <div class="card__thumb">
-                  <img src="./images/lab.jpg" alt="" width="370" height="294" />
+                  <img
+                    srcset="
+                      ./images/portfolio/desktop/lab-desktop.jpg    370w,
+                      ./images/portfolio/desktop/lab-desktop@2x.jpg 720w,
+                      ./images/portfolio/tablet/lab-tablet.jpg      354w,
+                      ./images/portfolio/tablet/lab-tablet@2x.jpg   708w,
+                      ./images/portfolio/mobile/lab-mobile.jpg      450w,
+                      ./images/portfolio/mobile/lab-mobile@2x.jpg   900w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px,
+              100vw"
+                    alt="lab"
+                    src="./images/portfolio/desktop/lab-desktop.jpg"
+                  />
                   <div class="card__overlay">
                     <p class="overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -279,7 +378,20 @@
             <li class="card__item">
               <a href="" class="card__link">
                 <div class="card__thumb">
-                  <img src="./images/growing-business.jpg" alt="" width="370" height="294" />
+                  <img
+                    srcset="
+                      ./images/portfolio/desktop/growing-business-desktop.jpg    370w,
+                      ./images/portfolio/desktop/growing-business-desktop@2x.jpg 720w,
+                      ./images/portfolio/tablet/growing-business-tablet.jpg      354w,
+                      ./images/portfolio/tablet/growing-business-tablet@2x.jpg   708w,
+                      ./images/portfolio/mobile/growing-business-mobile.jpg      450w,
+                      ./images/portfolio/mobile/growing-business-mobile@2x.jpg   900w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px,
+              100vw"
+                    alt="growing-business"
+                    src="./images/portfolio/desktop/growing-business-desktop.jpg"
+                  />
                   <div class="card__overlay">
                     <p class="overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
