--- a/index.html
+++ b/index.html
@@ -72,8 +72,12 @@
           </button>
           <div class="mobile-menu__group">
             <ul class="mobile-menu">
-              <li class="mobile-menu__list"><a href="" class="mobile-menu__link">Студія</a></li>
-              <li class="mobile-menu__list"><a href="" class="mobile-menu__link">Портфоліо</a></li>
+              <li class="mobile-menu__list">
+                <a href="./index.html" class="mobile-menu__link nav-list__link--current">Студія</a>
+              </li>
+              <li class="mobile-menu__list">
+                <a href="./portfolio.html" class="mobile-menu__link">Портфоліо</a>
+              </li>
               <li class="mobile-menu__list"><a href="" class="mobile-menu__link">Контакти</a></li>
             </ul>
             <ul class="mobile-menu">
